--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>BS4 Helper</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="bs4-helper.css">
+        <link rel="stylesheet" href="bs4-helper-bg-colors.css">
+        <link rel="stylesheet" href="bs4-helper-colors.css">
+        <link rel="stylesheet" href="bs4-helper-rotations.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -25,6 +28,8 @@
                             <a class="dropdown-item" href="#highvsnorm">Highlighted Text vs. Normal Text</a>
                             <a class="dropdown-item" href="#tltip">BS4 Helper Tooltip</a>
                             <a class="dropdown-item" href="#textsizecolor">BS4 Helper Text Sizes and Colors</a>
+                            <a class="dropdown-item" href="#additionalcolors">BS4 Helper Additional Colors</a>
+                            <a class="dropdown-item" href="#rotate">BS4 Helper Rotations</a>
                         </div>
                     </li>
                 </ul>
@@ -49,8 +54,10 @@
                     &lt;script src="https://bhogi7589.github.io/bs4-helper/bs4-helper.js"&gt;&lt;/script&gt;<br>
                     &lt;script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"&gt;&lt;/script&gt;</code>
                     <br><br>
-                    <h4 class="text-left">For more colors, use the colors style sheet of BS4 Helper:</h4>
-                    <code class="text-left">&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-colors.css"&gt;</code>
+                    <h4 class="text-left">For more colors and background colors, use the colors and background colors style sheets of BS4 Helper:</h4>
+                    <code class="text-left">&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-colors.css"&gt;<br>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-bg-colors.css"&gt;</code>
+                    <h4 class="text-left">To enable rotated components, use the rotations stylesheet of BS4 Helper:</h4>
+                    <code class="text-left">&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-rotations.css"&gt;</code>
                     <div class="alert alert-warning text-left">
                         <strong>Warning!</strong> BS4 Helper may not work as expected without importing Bootstrap 4!
                     </div>
@@ -116,6 +123,42 @@
                 <p class="text-small text-green">Small Green Text</p>
                 <p class="text-xs text-blue">Extra Small Blue Text</p>
                 <p class="text-comment">...and other possible combinations.</p>
+            </div>
+            <div class="section bg-white" id="additionalcolors">
+                <h1 class="heading heading-medium">BS4 Helper Additional Colors</h1>
+                <p class="text-large color-red-200">Red 200 Text</p>
+                <p class="text-large bg-red-200">Red 200 Background</p>
+                <p class="text-large color-cyan-200">Cyan 200 Text</p>
+                <p class="text-large bg-cyan-200">Cyan 200 Background</p>
+                <p class="text-large color-teal-200">Teal 200 Text</p>
+                <p class="text-large bg-teal-200">Teal 200 Background</p>
+                <p class="text-large color-red-900">Red 900 Text</p>
+                <p class="text-large bg-red-900 color-white">Red 900 Background</p>
+                <p class="text-large color-cyan-900">Cyan 900 Text</p>
+                <p class="text-large bg-cyan-900 color-white">Cyan 900 Background</p>
+                <p class="text-large color-teal-900">Teal 900 Text</p>
+                <p class="text-large bg-teal-900 color-white">Teal 900 Background</p>
+            </div>
+            <div class="section" id="rotate">
+                <h1 class="heading heading-medium">BS4 Helper Rotations</h1>
+                <p class="rotate-10">Text Rotated by 10 degrees(.rotate-10)</p>
+                <p class="rotate-20">Text Rotated by 20 degrees(.rotate-20)</p>
+                <p class="rotate-30">Text Rotated by 30 degrees(.rotate-30)</p>
+                <p class="rotate-40">Text Rotated by 40 degrees(.rotate-40)</p>
+                <p class="rotate-50">Text Rotated by 50 degrees(.rotate-50)</p>
+                <p class="rotate-60">Text Rotated by 60 degrees(.rotate-60)</p>
+                <p class="rotate-70">Text Rotated by 70 degrees(.rotate-70)</p>
+                <p class="rotate-80">Text Rotated by 80 degrees(.rotate-80)</p>
+                <p class="rotate-90">Text Rotated by 90 degrees(.rotate-90)</p>
+                <p class="rotate-100">Text Rotated by 100 degrees(.rotate-100)</p>
+                <p class="rotate-200">Text Rotated by 200 degrees(.rotate-200)</p>
+                <p class="rotate-300">Text Rotated by 300 degrees(.rotate-300)</p>
+                <p class="rotate-310">Text Rotated by 310 degrees(.rotate-310)</p>
+                <p class="rotate-320">Text Rotated by 320 degrees(.rotate-320)</p>
+                <p class="rotate-330">Text Rotated by 330 degrees(.rotate-330)</p>
+                <p class="rotate-340">Text Rotated by 340 degrees(.rotate-340)</p>
+                <p class="rotate-350">Text Rotated by 350 degrees(.rotate-350)</p>
+                <p class="rotate-360">Text Rotated by 360 degrees(.rotate-360)</p>
             </div>
         </div>
     </body>
