--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
                     </li>
                 </ul>
             </div>
+            <!-- hitwebcounter Code START -->
+            <p class="text-red">Number of visits:</p>&nbsp;&nbsp;
+            <a href="https://www.hitwebcounter.com" target="_blank">
+                <img src="https://hitwebcounter.com/counter/counter.php?page=7816178&style=0010&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" />
+            </a>                                    
         </nav>
-        <div class="container bg-rainbow">
+        <div class="container bg-rainbow" id="body">
             <div class="section" id="howtouse">
                 <div class="jumbotron">
                     <h1 class="heading heading-medium">Use BS4 Helper</h1>
@@ -160,6 +165,7 @@
                 <p class="rotate-350">Text Rotated by 350 degrees(.rotate-350)</p>
                 <p class="rotate-360">Text Rotated by 360 degrees(.rotate-360)</p>
             </div>
+            <footer class="blockquote-footer heading-small text-right">By Bhogi7589</footer>
         </div>
     </body>
 </html>
