--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                     <button class="btn btn-outline-light timer-btn float-left" id="myresetbtn"></button>
                     <p class="text-white timer-label" style="text-align: right" id="myp">Remaining Time: 00:02:00</p>
                 </div>
+                <p class="text-large text-red">For more examples of Timer Bars, click <a href="timer.html" target="_blank">here</a>.</p>
             </div>
             <div class="section" id="scroll">
                 <h1 class="heading heading-medium">BS4 Helper Scroll Indicators</h1>
@@ -135,6 +136,7 @@
             </div>
             <div class="section" id="textsizecolor">
                 <h1 class="heading heading-medium">BS4 Helper Text Sizes and Colors</h1>
+                <p class="text-xl">Extra Large Text</p>
                 <p class="text-large">Large Text</p>
                 <p class="text-medium">Medium Text</p>
                 <p class="text-small">Small Text</p>
@@ -148,6 +150,7 @@
                 <p class="text-indigo">Indigo Text</p>
                 <p class="text-violet">Violet Text</p>
                 <p class="text-comment">These sizes and colors can be combined as follows:</p>
+                <p class="text-xl text-orange">Extra Large Orange Text</p>
                 <p class="text-large text-red">Large Red Text</p>
                 <p class="text-medium text-yellow">Medium Yellow Text</p>
                 <p class="text-small text-green">Small Green Text</p>
@@ -191,6 +194,10 @@
                 <p class="rotate-360">Text Rotated by 360 degrees(.rotate-360)</p>
             </div>
             <footer class="blockquote-footer heading-small text-right">By Bhogi7589</footer>
+            <div class="input-group input-group-green" style="width: 1000px">
+                <input class="input">
+                <button class="input-toggle-btn" type="button">Click Me!</button>
+            </div>
         </div>
     </body>
 </html>
