--- a/index.html
+++ b/index.html
@@ -193,11 +193,7 @@
                 <p class="rotate-350">Text Rotated by 350 degrees(.rotate-350)</p>
                 <p class="rotate-360">Text Rotated by 360 degrees(.rotate-360)</p>
             </div>
-            <footer class="blockquote-footer heading-small text-right">By Bhogi7589</footer>
-            <div class="input-group input-group-green" style="width: 1000px">
-                <input class="input">
-                <button class="input-toggle-btn" type="button">Click Me!</button>
-            </div>
+            <footer class="blockquote-footer text-xl text-right">By Bhogi7589</footer>
         </div>
     </body>
 </html>
