--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html id="home">
+    <!-- Copyright Bhogi7589 -->
     <head>
         <title>BS4 Helper</title>
         <link rel="icon" href="https://miro.medium.com/max/1024/1*9HanDsRU11ZMsgDGJwN96w.png">
@@ -42,7 +43,7 @@
             <span class="text-red text-large navbar-text">Number of visits:</span>&nbsp;
             <span class="text-red navbar-text" id="visits">
                 <a href="https://www.hitwebcounter.com" target="_blank">
-                    <img src="https://hitwebcounter.com/counter/counter.php?page=7818759&style=0010&nbdigits=7&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" />
+                    <img src="https://hitwebcounter.com/counter/counter.php?page=7819952&style=0010&nbdigits=7&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" />
                 </a>
             </span>
         </nav>
