--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container bg-rainbow" id="body">
             <div class="section" id="howtouse">
                 <div class="jumbotron">
-                    <h1 class="heading heading-medium">Use BS4 Helper</h1>
+                    <h1 class="heading heading-underline heading-medium">Use BS4 Helper</h1>
                     <h1 class="text-left text-underline">Download BS4 helper:</h1>
                     <h2 class="text-left">Instructions:</h2>
                     <p class="text-left">In order to download, go to the following <a class="link" href="https://github.com/bhogi7589/bs4-helper.git" target="_blank">link</a> and click on 'Code'. In the dropdown menu that just shows up, click on 'Download ZIP'.</p>
@@ -77,22 +77,22 @@
                     </div>
                 </div>
             </div>
-            <h1 class="heading heading-large">BS4 Helper Preview</h1>
+            <h1 class="heading heading-underline heading-large">BS4 Helper Preview</h1>
             <div class="section" id="progress">
-                <h1 class="heading heading-medium">BS4 Helper Growing Progress Bars</h1>
-                <h1 class="heading">Normal Progress Bar</h1>
+                <h1 class="heading heading-underline heading-medium">BS4 Helper Growing Progress Bars</h1>
+                <h1 class="heading heading-underline">Normal Progress Bar</h1>
                 <div class="progress">
                     <div class="progress-bar bg-success" style="width: 50%"></div>
                 </div>
-                <h1 class="heading">Growing Progress Bar</h1>
+                <h1 class="heading heading-underline">Growing Progress Bar</h1>
                 <div class="progress">
                     <div class="progress-bar bg-success" data-progress="grow" data-transition=10 data-max-width=95 show-percentage="true"></div>
                 </div>
-                <h1 class="heading">Shrinking Progress Bar</h1>
+                <h1 class="heading heading-underline">Shrinking Progress Bar</h1>
                 <div class="progress">
                     <div class="progress-bar bg-success" data-progress="shrink" data-transition=10 data-min-width=25 show-percentage="true"></div>
                 </div>
-                <h1 class="heading">Timer Bar</h1>
+                <h1 class="heading heading-underline">Timer Bar</h1>
                 <div class="progress">
                     <div class="progress-bar bg-success" data-progress="timer" data-time=120 toggle-btn="mybtn" reset-btn="myresetbtn" show-label="myp"></div>
                 </div>
@@ -104,11 +104,11 @@
                 <p class="text-large text-red">For more examples of Timer Bars, click <a href="timer.html" target="_blank">here</a>.</p>
             </div>
             <div class="section" id="scroll">
-                <h1 class="heading heading-medium">BS4 Helper Scroll Indicators</h1>
+                <h1 class="heading heading-underline heading-medium">BS4 Helper Scroll Indicators</h1>
                 <p class="heading-small text-red">Look at the bottom to see the scroll indicator and scroll this page to see the effect.</p>
             </div>
             <div class="section" id="headings">
-                <h1 class="heading heading-medium">BS4 Helper Headings</h1>
+                <h1 class="heading heading-underline heading-medium">BS4 Helper Headings</h1>
                 <h1 class="display-1">Display-1</h1>
                 <h1>Heading-1</h1>
                 <h2 class="display-2">Display-2</h2>
@@ -117,26 +117,26 @@
                 <h3>Heading-3</h3>
                 <h4 class="display-4">Display-4</h4>
                 <h4>Heading-4</h4>
-                <h2 class="heading heading-small">Colored Headings</h2>
-                <h1 class="heading heading-red">Red Heading</h1>
-                <h1 class="heading heading-orange">Orange Heading</h1>
-                <h1 class="heading heading-yellow">Yellow Heading</h1>
-                <h1 class="heading heading-green">Green Heading</h1>
-                <h1 class="heading heading-cyan">Cyan Heading</h1>
-                <h1 class="heading heading-blue bg-red">Blue Heading</h1>
-                <h1 class="heading heading-indigo bg-red">Indigo Heading</h1>
-                <h1 class="heading heading-violet bg-red">Violet/Purple Heading</h1>
+                <h2 class="heading heading-underline heading-small">Colored Headings</h2>
+                <h1 class="heading heading-underline heading-red">Red Heading</h1>
+                <h1 class="heading heading-underline heading-orange">Orange Heading</h1>
+                <h1 class="heading heading-underline heading-yellow">Yellow Heading</h1>
+                <h1 class="heading heading-underline heading-green">Green Heading</h1>
+                <h1 class="heading heading-underline heading-cyan">Cyan Heading</h1>
+                <h1 class="heading heading-underline heading-blue bg-red">Blue Heading</h1>
+                <h1 class="heading heading-underline heading-indigo bg-red">Indigo Heading</h1>
+                <h1 class="heading heading-underline heading-violet bg-red">Violet/Purple Heading</h1>
             </div>
             <div class="section" id="highvsnorm">
-                <h1 class="heading heading-medium">Highlighted Text vs. Normal text (<code>&lt;mark&gt;</code> element)</h1>
+                <h1 class="heading heading-underline heading-medium">Highlighted Text vs. Normal text (<code>&lt;mark&gt;</code> element)</h1>
                 <p><mark>Highlighted Text</mark> Normal Text</p>
             </div>
             <div class="section" id="tltip">
-                <h1 class="heading heading-medium">BS4 Helper Tooltip</h1>
+                <h1 class="heading heading-underline heading-medium">BS4 Helper Tooltip</h1>
                 <h4 data-toggle="tooltip" data-placement="top" title="I am a tooltip!">Hover over me</h4>
             </div>
             <div class="section" id="textsizecolor">
-                <h1 class="heading heading-medium">BS4 Helper Text Sizes and Colors</h1>
+                <h1 class="heading heading-underline heading-medium">BS4 Helper Text Sizes and Colors</h1>
                 <p class="text-xl">Extra Large Text</p>
                 <p class="text-large">Large Text</p>
                 <p class="text-medium">Medium Text</p>
@@ -159,7 +159,7 @@
                 <p class="text-comment">...and other possible combinations.</p>
             </div>
             <div class="section bg-white" id="additionalcolors">
-                <h1 class="heading heading-medium">BS4 Helper Additional Colors</h1>
+                <h1 class="heading heading-underline heading-medium">BS4 Helper Additional Colors</h1>
                 <p class="text-large color-red-200">Red 200 Text</p>
                 <p class="text-large bg-red-200">Red 200 Background</p>
                 <p class="text-large color-cyan-200">Cyan 200 Text</p>
@@ -174,7 +174,7 @@
                 <p class="text-large bg-teal-900 color-white">Teal 900 Background</p>
             </div>
             <div class="section" id="rotate">
-                <h1 class="heading heading-medium">BS4 Helper Rotations</h1>
+                <h1 class="heading heading-underline heading-medium">BS4 Helper Rotations</h1>
                 <p class="rotate-10">Text Rotated by 10 degrees(.rotate-10)</p>
                 <p class="rotate-20">Text Rotated by 20 degrees(.rotate-20)</p>
                 <p class="rotate-30">Text Rotated by 30 degrees(.rotate-30)</p>
