--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>BS4 Helper</title>
         <meta charset="utf-8">
-        <meta name="viewport" content=""
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="https://miro.medium.com/max/1024/1*9HanDsRU11ZMsgDGJwN96w.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="bs4-helper.css">
