--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
             <div class="section" id="howtouse">
                 <div class="jumbotron">
                     <h1 class="heading heading-underline heading-medium">Use BS4 Helper</h1>
-                    <h1 class="text-left text-underline">Download BS4 helper:</h1>
-                    <h2 class="text-left">Instructions:</h2>
-                    <p class="text-left">In order to download, go to the following <a class="link" href="https://github.com/bhogi7589/bs4-helper.git" target="_blank">link</a> and click on 'Code'. In the dropdown menu that just shows up, click on 'Download ZIP'.</p>
-                    <h1 class="text-left text-underline">Using CDN:</h1>
-                    <h2 class="text-left">Instructions:</h2>
-                    <p class="text-left">If you don't want to download and host BS4 Helper yourself, you can include it from a CDN (Content Delivery Network).</p><br>
-                    <h3 class="text-left">Copy the code below and paste it in your <code>&lt;head&gt;</code> tag:</h3>
-                    <code class="text-left">&lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"&gt;<br>
+                    <h1 class="text-underline">Download BS4 helper:</h1>
+                    <h2>Instructions:</h2>
+                    <p>In order to download, go to the following <a class="link" href="https://github.com/bhogi7589/bs4-helper.git" target="_blank">link</a> and click on 'Code'. In the dropdown menu that just shows up, click on 'Download ZIP'.</p>
+                    <h1 class="text-underline">Using CDN:</h1>
+                    <h2>Instructions:</h2>
+                    <p>If you don't want to download and host BS4 Helper yourself, you can include it from a CDN (Content Delivery Network).</p><br>
+                    <h3>Copy the code below and paste it in your <code>&lt;head&gt;</code> tag:</h3>
+                    <code>&lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"&gt;<br>
                     &lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper.css"&gt;<br>
                     &lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"&gt;&lt;/script&gt;<br>
                     &lt;script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"&gt;&lt;/script&gt;<br>
@@ -62,13 +62,13 @@
                     &lt;script src="https://bhogi7589.github.io/bs4-helper/bs4-helper.js"&gt;&lt;/script&gt;<br>
                     </code>
                     <br><br>
-                    <h4 class="text-left">You must also import Font Awesome 4 Icons:</h4>
-                    <code class="text-left">&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"&gt;</code>
-                    <h4 class="text-left">For more colors and background colors, use the colors and background colors style sheets of BS4 Helper:</h4>
-                    <code class="text-left">&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-colors.css"&gt;<br>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-bg-colors.css"&gt;</code>
-                    <h4 class="text-left">To enable rotated components, use the rotations stylesheet of BS4 Helper:</h4>
-                    <code class="text-left">&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-rotations.css"&gt;</code>
-                    <div class="alert alert-warning text-left">
+                    <h4>You must also import Font Awesome 4 Icons:</h4>
+                    <code>&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"&gt;</code>
+                    <h4>For more colors and background colors, use the colors and background colors style sheets of BS4 Helper:</h4>
+                    <code>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-colors.css"&gt;<br>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-bg-colors.css"&gt;</code>
+                    <h4>To enable rotated components, use the rotations stylesheet of BS4 Helper:</h4>
+                    <code>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-rotations.css"&gt;</code>
+                    <div class="alert alert-warning">
                         <strong>Warning!</strong> BS4 Helper may not work as expected without importing Bootstrap 4!
                     </div>
                 </div>
@@ -93,9 +93,9 @@
                     <div class="progress-bar bg-success" data-progress="timer" data-time=120 toggle-btn="mybtn" reset-btn="myresetbtn" show-label="myp"></div>
                 </div>
                 <div class="row">
-                    <button class="btn btn-outline-success timer-btn float-left" id="mybtn"></button>
-                    <button class="btn btn-outline-light timer-btn float-left" id="myresetbtn"></button>
-                    <p class="text-white timer-label" style="text-align: right" id="myp">Remaining Time: 00:02:00</p>
+                    <button class="btn btn-outline-success timer-btn" id="mybtn"></button>
+                    <button class="btn btn-outline-light timer-btn" id="myresetbtn"></button>
+                    <p class="text-white timer-label" id="myp">Remaining Time: 00:02:00</p>
                 </div>
                 <p class="text-large text-red">For more examples of Timer Bars, click <a href="timer.html" target="_blank">here</a>.</p>
             </div>
