--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html id="home">
-    <!-- Copyright 2021 Bhogi7589 -->
+    <!-- Copyright 2021 Karthikeya -->
     <head>
         <title>BS4 Helper</title>
         <meta charset="utf-8">
@@ -17,11 +17,11 @@
         <script src="bs4-helper.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <body data-spy="scroll" data-target=".navbar" data-offset="50">
+    <body data-spy="scroll" data-target=".navbar" data-offset="50" class="theme-dark">
         <div class="scroll-container">
             <div class="scroll-indicator bg-success"></div>
         </div>
-        <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light">
             <a class="navbar-brand" href="#home">Home</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navigation">
@@ -43,7 +43,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="container bg-rainbow" id="body">
+        <div class="container" id="body">
             <div class="section" id="howtouse">
                 <div class="jumbotron">
                     <h1 class="heading heading-underline heading-medium">Use BS4 Helper</h1>
@@ -190,7 +190,7 @@
                 <p class="rotate-350">Text Rotated by 350 degrees(.rotate-350)</p>
                 <p class="rotate-360">Text Rotated by 360 degrees(.rotate-360)</p>
             </div>
-            <footer class="blockquote-footer text-xl text-right">By Bhogi7589</footer>
+            <footer class="blockquote-footer text-xl text-right">By Karthikeya</footer>
         </div>
     </body>
 </html>
