--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <p class="text-xs text-blue">Extra Small Blue Text</p>
                 <p class="text-comment">...and other possible combinations.</p>
             </div>
-            <div class="section bg-white" id="additionalcolors">
+            <div class="section theme-light" id="additionalcolors">
                 <h1 class="heading heading-underline heading-medium">BS4 Helper Additional Colors</h1>
                 <p class="text-large color-red-200">Red 200 Text</p>
                 <p class="text-large bg-red-200">Red 200 Background</p>
