--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html id="home">
-    <!-- Copyright 2021 Karthikeya -->
+    <!-- Copyright 2021 Karthikeya Kaza -->
     <head>
         <title>BS4 Helper</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="https://miro.medium.com/max/1024/1*9HanDsRU11ZMsgDGJwN96w.png">
+        <link rel="icon" href="Icon.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -47,6 +47,7 @@
             <div class="section" id="howtouse">
                 <div class="jumbotron">
                     <h1 class="heading heading-underline heading-medium">Use BS4 Helper</h1>
+                    <footer class="blockquote-footer text-xl">By Karthikeya Kaza</footer>
                     <h1 class="text-underline">Download BS4 helper:</h1>
                     <h2>Instructions:</h2>
                     <p>In order to download, go to the following <a class="link" href="https://github.com/bhogi7589/bs4-helper.git" target="_blank">link</a> and click on 'Code'. In the dropdown menu that just shows up, click on 'Download ZIP'.</p>
@@ -190,7 +191,6 @@
                 <p class="rotate-350">Text Rotated by 350 degrees(.rotate-350)</p>
                 <p class="rotate-360">Text Rotated by 360 degrees(.rotate-360)</p>
             </div>
-            <footer class="blockquote-footer text-xl text-right">By Karthikeya</footer>
         </div>
     </body>
 </html>
