--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="section" id="howtouse">
                 <div class="jumbotron">
                     <h1 class="heading heading-underline heading-medium">Use BS4 Helper</h1>
-                    <footer class="blockquote-footer text-xl">By Karthikeya Kaza</footer>
+                    <footer class="blockquote-footer text-xl text-blue font-weight-bold">By Karthikeya Kaza</footer>
                     <h1 class="text-underline">Download BS4 helper:</h1>
                     <h2>Instructions:</h2>
                     <p>In order to download, go to the following <a class="link" href="https://github.com/bhogi7589/bs4-helper.git" target="_blank">link</a> and click on 'Code'. In the dropdown menu that just shows up, click on 'Download ZIP'.</p>
