--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>BS4 Helper</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="icon" href="Icon.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -46,7 +46,7 @@
         <div class="container" id="body">
             <div class="section" id="howtouse">
                 <div class="jumbotron">
-                    <h1 class="heading heading-underline heading-medium">Use BS4 Helper</h1>
+                    <h1 class="heading heading-underline heading-medium">A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper</h1>
                     <footer class="blockquote-footer text-xl text-blue font-weight-bold">By Karthikeya Kaza</footer>
                     <h1 class="text-underline">Download BS4 helper:</h1>
                     <h2>Instructions:</h2>
