--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container" id="body">
             <div class="section" id="howtouse">
                 <div class="jumbotron">
-                    <h1 class="heading heading-underline display-4">A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper</h1>
+                    <h1 class="heading heading-underline heading-small">A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper</h1>
                     <footer class="blockquote-footer text-xl text-blue font-weight-bold">By Karthikeya Kaza</footer>
                     <h1 class="text-underline">Download BS4 helper:</h1>
                     <h2>Instructions:</h2>
