--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html id="home">
     <!-- Copyright 2021 Karthikeya Kaza -->
+    <!-- A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper. -->
     <head>
         <title>BS4 Helper</title>
         <meta charset="utf-8">
