--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Copyright 2021 Karthikeya Kaza -->
     <!-- A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper. -->
     <head>
-        <title>BS4 Helper</title>
+        <title>A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <link rel="icon" href="Icon.png">
