--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <footer class="blockquote-footer text-xl text-blue font-weight-bold">By Karthikeya Kaza</footer>
                     <h1 class="text-underline">Download BS4 helper:</h1>
                     <h2>Instructions:</h2>
-                    <p>In order to download, go to the following <a class="link" href="https://github.com/bhogi7589/bs4-helper.git" target="_blank">link</a> and click on 'Code'. In the dropdown menu that just shows up, click on 'Download ZIP'.</p>
+                    <a class="link" href="https://github.com/bhogi7589/bs4-helper/archive/refs/heads/main.zip" target="_blank">Click to Download.</a>
                     <h1 class="text-underline">Using CDN:</h1>
                     <h2>Instructions:</h2>
                     <p>If you don't want to download and host BS4 Helper yourself, you can include it from a CDN (Content Delivery Network).</p><br>
