--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="bs4-helper-colors.css">
         <link rel="stylesheet" href="bs4-helper-rotations.css">
         <script src="bs4-helper.js"></script>
-        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50" class="theme-dark">
         <div class="scroll-container fixed-bottom">
