--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="bs4-helper-colors.css">
         <link rel="stylesheet" href="bs4-helper-rotations.css">
         <script src="bs4-helper.js"></script>
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50" class="theme-dark">
         <div class="scroll-container fixed-bottom">
@@ -65,8 +65,8 @@
                     &lt;script src="https://bhogi7589.github.io/bs4-helper/bs4-helper.js"&gt;&lt;/script&gt;<br>
                     </code>
                     <br><br>
-                    <h4>You must also import Font Awesome 5 Icons:</h4>
-                    <code>&lt;script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"&gt;&lt;/script&gt;</code>
+                    <h4>You must also import Font Awesome 4 Icons:</h4>
+                    <code>&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"&gt;</code>
                     <h4>For more colors and background colors, use the colors and background colors style sheets of BS4 Helper:</h4>
                     <code>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-colors.css"&gt;<br>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-bg-colors.css"&gt;</code>
                     <h4>To enable rotated components, use the rotations stylesheet of BS4 Helper:</h4>
@@ -121,9 +121,9 @@
                 <h1 class="heading heading-underline heading-yellow">Yellow Heading</h1>
                 <h1 class="heading heading-underline heading-green">Green Heading</h1>
                 <h1 class="heading heading-underline heading-cyan">Cyan Heading</h1>
-                <h1 class="heading heading-underline heading-blue bg-red">Blue Heading</h1>
-                <h1 class="heading heading-underline heading-indigo bg-red">Indigo Heading</h1>
-                <h1 class="heading heading-underline heading-violet bg-red">Violet/Purple Heading</h1>
+                <h1 class="heading heading-underline heading-blue">Blue Heading</h1>
+                <h1 class="heading heading-underline heading-indigo">Indigo Heading</h1>
+                <h1 class="heading heading-underline heading-violet">Violet/Purple Heading</h1>
             </div>
             <div class="section" id="highvsnorm">
                 <h1 class="heading heading-underline heading-medium">Highlighted Text vs. Normal text (<code>&lt;mark&gt;</code> element)</h1>
